--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,14 @@
   </head>
 
   <body>
+      <%= link_to "Home", "/"%>&nbsp;<%= link_to "Locations", '/locations',method: :get%>
+      <%=link_to "Sign In",new_user_session_path,method: :get%></li>
+      <%=link_to "Sign Up",'/users/sign_up',method: :get%>
+      <%= link_to "Locations", '/locations',method: :get%>
+      
+      <%= link_to("Sign Out", destroy_user_session_path, :method => 'delete') %>
+
     <%= yield %>
-    <%= link_to("Sign Out", destroy_user_session_path, :method => 'delete') %>
+
   </body>
 </html>
