--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,3 +1,3 @@
 You are in Location Show page
 <%= @location.name %>
-<%=User.find(@location.user_id).email %>
+<%#=User.find(@location.user_id).email %>
