--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,12 +1,15 @@
 <h1>Travel App</h1>
-Welcome <%= current_user.email if current_user%>! you are currently <%if user_signed_in? %> Signed In
+Welcome, <%= current_user.email if current_user%> you are currently <%if user_signed_in? %> Signed In
 <br>
-<%= render 'locations/location_form'%>
-
 <% else%>
-not Signed in
+not Signed In,Please Sign In to add a location!
 <%end%>
 <p>
-  <%= link_to "Locations", '/locations',method: :get%>
-<%=link_to "Sign In",new_user_session_path,method: :get%></li>
-<%=link_to "Sign Up",'/users/sign_up',method: :get%>
+<%= link_to "Add Location", new_location_path, id: "addlocation", remote: true%>
+
+<%#= link_to "Edit", edit_location_path(location), id: "editloc", remote: true%>
+
+<p>
+
+
+<div id="display" style="color:blue"><ol></ol></div>
