adding some details

--- a/app/views/locations/_location_form.html.erb
+++ b/app/views/locations/_location_form.html.erb
@@ -12,3 +12,4 @@ Description:
  Image:<%= f.text_field :img_url%>
  <%= f.submit "Create Location"%>
 <% end %>
+<a href="#" id="hideform">Not Now</a>
