--- a/app/views/locations/index.js.erb
+++ b/app/views/locations/index.js.erb
@@ -1,3 +1,4 @@
 
-$('#displaylocations').hide()
+$('#displaylocations').hide();
+
 $("#displayol").append('<%= j render 'locations',locations: @locations%>');
