--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,6 @@
 <h1>Travel App</h1>
-Welcome, <%= current_user.email if current_user%> you are currently <%if user_signed_in? %> Signed In
+Welcome, <%= current_user.email if current_user%> you are currently
+<%if user_signed_in? %> Signed In
 <br>
 <% else%>
 not Signed In,Please Sign In to add a location!
@@ -8,10 +9,9 @@ not Signed In,Please Sign In to add a location!
   <%= link_to "Display Locations", '/locations', id: "displaylocations", remote: true%>
 
 <%= link_to "Add Location", new_location_path, id: "addlocation", remote: true%>
-<div id="displayol"></div> 
+
+
+<div id="displayol"></div>
 <%#= link_to "Edit", edit_location_path(location), id: "editloc", remote: true%>
 
 <p>
-
-
-<div id="display" style="color:blue"><ol></ol></div>
