--- a/app/views/locations/index.js.erb
+++ b/app/views/locations/index.js.erb
@@ -1,4 +1,5 @@
 
-$('#displaylocations').hide();
+$('#displaylocations').hide();// hide the Display Location link in welcome/home.html.erb
+
 
 $("#displayol").append('<%= j render 'locations',locations: @locations%>');
